--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grant Abel Portfolio</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
+    <title>Grant Abel | Professional Portfolio</title>
+    <link href="styles.css" rel="stylesheet" type="text/css” />
+    
 </head>
-
 <body>
-    <!-- commenting out this line to make change and push to remote repo -->
-
+    
 </body>
-
 </html>
