--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grant Abel | Professional Portfolio</title>
-    <link href="styles.css" rel="stylesheet" type="text/css” />
-    
+    <link href="styles.css" rel="stylesheet" type="text/css">
+    <title>GTA | Portfolio</title>
 </head>
+
 <body>
-    
+    <h1>GRANT ABEL || AN INTRODUCTION</h1>
+
 </body>
+
 </html>
