WIP; working on utilizing font saved from web on h1

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <title>GTA | Portfolio</title>
 </head>
 
+
 <body>
+    div {
+    font-family: trap;
+    }
+
     <h1>GRANT ABEL || AN INTRODUCTION</h1>
+
+    <p><img src="Images/me.jpeg" alt="self portrait"></p>
 
 </body>
 
