WIP - will have to come back this evening, babay sitter leaving.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <title>GTA | Portfolio</title>
 </head>
 
-
-<body>
-    div {
-    font-family: trap;
+<style>
+    @font-face {
+        font-family: trap;
+        src: url(/fonts/Trap-ExtraBold.otf)
     }
 
+    div {
+        font-family: trap;
+    }
+</style>
+
+<body>
     <h1>GRANT ABEL || AN INTRODUCTION</h1>
 
     <p><img src="Images/me.jpeg" alt="self portrait"></p>
