Started at 6pm // Add projects section to .html

--- a/index.html
+++ b/index.html
@@ -20,10 +20,27 @@
 </style>
 
 <body>
-    <h1>GRANT ABEL || AN INTRODUCTION</h1>
+    <h1>GRANT ABEL || AN INTRODUCTION</h1>=
+    <p id="portrait">
+        <img src="Images/me.jpeg" alt="self portrait">
+    </p>
 
-    <p><img src="Images/me.jpeg" alt="self portrait"></p>
-
+    <p> PAST PROJECTS
+    <ul>
+        <li>
+            <a href="" target="_blank">Week 1 | Monday/Tuesday</a>
+        </li>
+        <li>
+            <a href="" target="_blank">Assignment | Pet Website</a>
+        </li>
+        <li>
+            <a href="" target="_blank"> Assignment | Blog</a>
+        </li>
+        <li>
+            <a href="" target="_blank"> Week 1 | Thursday</a>
+        </li>
+    </ul>
+    </p>
 </body>
 
 </html>
