git links for past work added and working.

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     <p> PAST PROJECTS
     <ul>
         <li>
-            <a href="" target="_blank">Week 1 | Monday/Tuesday</a>
+            <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank">Week 1 | Monday/Tuesday</a>
         </li>
         <li>
-            <a href="" target="_blank">Assignment | Pet Website</a>
+            <a href="https://github.com/gtayyy/Pet-webite.git" target="_blank">Assignment | Pet Website</a>
         </li>
         <li>
-            <a href="" target="_blank"> Assignment | Blog</a>
+            <a href="https://github.com/gtayyy/blog-site.git" target="_blank"> Assignment | Blog</a>
         </li>
         <li>
-            <a href="" target="_blank"> Week 1 | Thursday</a>
+            <a href="https://github.com/gtayyy/thursday.git" target="_blank"> Week 1 | Thursday</a>
         </li>
     </ul>
     </p>
