--- a/index.html
+++ b/index.html
@@ -20,12 +20,27 @@
 </style>
 
 <body>
-    <h1>GRANT ABEL || AN INTRODUCTION</h1>=
-    <p id="portrait">
-        <img src="Images/me.jpeg" alt="self portrait">
+    <h1>GRANT ABEL || AN INTRODUCTION</h1>
+
+    <img src="Images/me.jpeg" alt="self portrait">
+
+    <p class="about_me">ABOUT ME</p>
+    <p class="about_me">
+        Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty of land
+        to roam and play, my families home was to go-to place for many of the neighbor kids to go. We would build forts
+        in the forest adjacent to our property. As we grew older, we began shoveling dirt in an area of our property to
+        make BMX jumps. BMX bikes led to motorcycles and going to local dirtbike races on the weekends.
+
+        During my time in high school I had the chance to attend an extension school which allowed me the opportunity to
+        take part in a graphic design focused curriculm. It was here that I found a true joy in front-end design and
+        beginning design concepts. While I had the mindset to pursue this further as I entered college, ultimately I
+        changed course of degree. Now at this stage in life, looking to come back to the tech industry, I genuinely
+        regret the decision to pursue other avenues for reasons that weren't my own.
+
+        This is now my time. Now I feel free. Welcome to my porfolio.
     </p>
 
-    <p> PAST PROJECTS
+    <p class="past_projects"> PAST PROJECTS
     <ul>
         <li>
             <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank">Week 1 | Monday/Tuesday</a>
@@ -41,6 +56,9 @@
         </li>
     </ul>
     </p>
+
+
+
 </body>
 
 </html>
