Change link font color.; add project section filler text; reorder page layout.

--- a/index.html
+++ b/index.html
@@ -40,20 +40,39 @@
         This is now my time. Now I feel free. Welcome to my porfolio.
     </p>
 
-    <p class="past_projects"> PAST PROJECTS
+    <p class="past_projects"> COLLECTION OF WORK
     <ul>
         <li>
             <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank">Week 1 | Monday/Tuesday</a>
         </li>
+
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+        </p>
+
         <li>
             <a href="https://github.com/gtayyy/Pet-webite.git" target="_blank">Assignment | Pet Website</a>
         </li>
+
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+        </p>
+
         <li>
             <a href="https://github.com/gtayyy/blog-site.git" target="_blank"> Assignment | Blog</a>
         </li>
+
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+        </p>
+
         <li>
             <a href="https://github.com/gtayyy/thursday.git" target="_blank"> Week 1 | Thursday</a>
         </li>
+
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+        </p>
     </ul>
     </p>
 
