Professional background section and filler text.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <h1>GRANT ABEL || AN INTRODUCTION</h1>
 
     <img src="Images/me.jpeg" alt="self portrait">
+    <br>
+    <br>
 
     <p class="about_me">ABOUT ME</p>
     <p class="about_me">
@@ -39,6 +41,8 @@
 
         This is now my time. Now I feel free. Welcome to my porfolio.
     </p>
+    <br>
+    <br>
 
     <p class="past_projects"> COLLECTION OF WORK
     <ul>
@@ -74,6 +78,18 @@
             dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
         </p>
     </ul>
+    </p>
+    <br>
+    <br>
+
+    <p class="pro_bg"> PROFESSIONAL BACKGROUND </p>
+    <p class="pro_bg">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Nunc congue nisi vitae suscipit tellus mauris. Faucibus et molestie ac feugiat sed lectus. Egestas
+        sed sed risus pretium quam. Ut eu sem integer vitae justo eget magna. Ridiculus mus mauris vitae ultricies leo
+        integer. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Ac tortor dignissim convallis aenean.
+        Pellentesque elit eget gravida cum sociis natoque penatibus et. Eu volutpat odio facilisis mauris sit amet massa
+        vitae. Tristique senectus et netus et.
     </p>
 
 
