Add hobbies section; remove unneeded class tags in html; add some copy formatting.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <br>
 
     <p class="about_me">ABOUT ME</p>
-    <p class="about_me">
+    <p>
         Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty of land
         to roam and play, my families home was to go-to place for many of the neighbor kids to go. We would build forts
         in the forest adjacent to our property. As we grew older, we began shoveling dirt in an area of our property to
@@ -82,8 +82,8 @@
     <br>
     <br>
 
-    <p class="pro_bg"> PROFESSIONAL BACKGROUND </p>
-    <p class="pro_bg">
+    <p class="pro_bg"> PROFESSIONAL/PERSONAL BACKGROUND </p>
+    <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Nunc congue nisi vitae suscipit tellus mauris. Faucibus et molestie ac feugiat sed lectus. Egestas
         sed sed risus pretium quam. Ut eu sem integer vitae justo eget magna. Ridiculus mus mauris vitae ultricies leo
@@ -91,8 +91,41 @@
         Pellentesque elit eget gravida cum sociis natoque penatibus et. Eu volutpat odio facilisis mauris sit amet massa
         vitae. Tristique senectus et netus et.
     </p>
+    <br>
+    <br>
 
+    <p class="edu"> EDUCATION & SHIFT TO PROGRAMMING </p>
+    <p> Bibendum est ultricies integer quis auctor elit sed. Id porta nibh venenatis cras. Commodo odio aenean sed
+        adipiscing diam. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Erat pellentesque adipiscing
+        commodo elit at imperdiet dui. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada proin libero.
+        Sollicitudin tempor id eu nisl nunc. Pellentesque elit ullamcorper dignissim cras tincidunt. Eu lobortis
+        elementum nibh tellus molestie. Tellus orci ac auctor augue. Diam vulputate ut pharetra sit amet aliquam. At
+        quis risus sed vulputate odio ut enim blandit volutpat. In massa tempor nec feugiat. Adipiscing vitae proin
+        sagittis nisl rhoncus mattis rhoncus.
+        <br>
+        <br>
+        Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor condimentum lacinia quis.
+        Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan tortor
+        posuere ac ut. At tellus at urna condimentum mattis pellentesque id. Vitae justo eget magna fermentum iaculis.
+        Purus viverra accumsan in nisl nisi scelerisque. Malesuada proin libero nunc consequat interdum varius sit.
+        Sapien et ligula ullamcorper malesuada proin libero. Nulla aliquet enim tortor at auctor urna nunc id
+        cursus.Eget felis eget nunc lobortis. Phasellus vestibulum lorem sed risus. Auctor neque vitae tempus quam. Et
+        odio pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper
+        sit amet risus nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
+    </p>
+    <br>
+    <br>
 
+    <p class="hobbies"> WHEN NOT WORKING... </p>
+    <p>Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor condimentum lacinia quis.
+        Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan tortor
+        posuere ac ut. At tellus at urna condimentum mattis pellentesque id. Vitae justo eget magna fermentum iaculis.
+        Purus viverra accumsan in nisl nisi scelerisque. Malesuada proin libero nunc consequat interdum varius sit.
+        Sapien et ligula ullamcorper malesuada proin libero. Nulla aliquet enim tortor at auctor urna nunc id cursus.
+        Eget felis eget nunc lobortis. Phasellus vestibulum lorem sed risus. Auctor neque vitae tempus quam. Et odio
+        pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper sit
+        amet risus nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
+    </p>
 
 </body>
 
