Verify required elements and tags are used. Changed education section to be a <ol> tag.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br>
 
     <p class="past_projects"> COLLECTION OF WORK
-    <ul>
+    <ol>
         <li>
             <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank">Week 1 | Monday/Tuesday</a>
         </li>
@@ -77,7 +77,7 @@
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
         </p>
-    </ul>
+    </ol>
     </p>
     <br>
     <br>
@@ -95,24 +95,30 @@
     <br>
 
     <p class="edu"> EDUCATION & SHIFT TO PROGRAMMING </p>
-    <p> Bibendum est ultricies integer quis auctor elit sed. Id porta nibh venenatis cras. Commodo odio aenean sed
-        adipiscing diam. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Erat pellentesque adipiscing
-        commodo elit at imperdiet dui. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada proin libero.
-        Sollicitudin tempor id eu nisl nunc. Pellentesque elit ullamcorper dignissim cras tincidunt. Eu lobortis
-        elementum nibh tellus molestie. Tellus orci ac auctor augue. Diam vulputate ut pharetra sit amet aliquam. At
-        quis risus sed vulputate odio ut enim blandit volutpat. In massa tempor nec feugiat. Adipiscing vitae proin
-        sagittis nisl rhoncus mattis rhoncus.
-        <br>
-        <br>
-        Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor condimentum lacinia quis.
-        Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan tortor
-        posuere ac ut. At tellus at urna condimentum mattis pellentesque id. Vitae justo eget magna fermentum iaculis.
-        Purus viverra accumsan in nisl nisi scelerisque. Malesuada proin libero nunc consequat interdum varius sit.
-        Sapien et ligula ullamcorper malesuada proin libero. Nulla aliquet enim tortor at auctor urna nunc id
-        cursus.Eget felis eget nunc lobortis. Phasellus vestibulum lorem sed risus. Auctor neque vitae tempus quam. Et
-        odio pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper
-        sit amet risus nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
-    </p>
+    <ol>
+        <li>FIELD INSTALLATION MANAGER
+            <br>
+            10.2021-CURRENT | SMARTRENT
+            Facilitating and orchestrating a smooth installation process is my
+            number one priority. I work between the property management
+            and residents while overseeing a small crew of subcontractors
+            completing the install of new devices. Maintaining a high level of
+            QA is priority two, which ensures an easy transition for the property
+            management and residents, as well as minimizing the number of
+            issues post install.
+            </p>
+        <li>COMMUNITY MANAGER
+            <br>
+            04.2021-10.2021 | MILL CREEK RESIDENTIAL
+            Oversaw and managed all operation aspects of the community in
+            order to drive company initiatives and goals. To do so, budgets
+            were created and adhered to, cost saving initiatives were sought
+            and sales efforts were focused upon. Upkeep of property
+            appearances via maintenance staff and vendors was a large part
+            of daily operations in order to raise resident retention rate.
+        </li>
+        </p>
+    </ol>
     <br>
     <br>
 
