WIP; trying to figure out where and how to incorporate div and span tags.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <br>
     <br>
 
-    <p class="edu"> EDUCATION & SHIFT TO PROGRAMMING </p>
+    <p> EDUCATION & SHIFT TO PROGRAMMING </p>
     <ol>
         <li>FIELD INSTALLATION MANAGER
             <br>
@@ -109,7 +109,7 @@
             </p>
         <li>COMMUNITY MANAGER
             <br>
-            04.2021-10.2021 | MILL CREEK RESIDENTIAL
+            <span class="">04.2021-10.2021 | MILL CREEK RESIDENTIAL</span>
             Oversaw and managed all operation aspects of the community in
             order to drive company initiatives and goals. To do so, budgets
             were created and adhered to, cost saving initiatives were sought
