Remove previous classes created for each section. using <h2> for section headers to streamline future editing.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <br>
     <br>
 
-    <p class="about_me">ABOUT ME</p>
+    <p>
+    <h2> ABOUT ME </h2>
+    </p>
+
     <p>
         Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty of land
         to roam and play, my families home was to go-to place for many of the neighbor kids to go. We would build forts
@@ -44,7 +47,9 @@
     <br>
     <br>
 
-    <p class="past_projects"> COLLECTION OF WORK
+    <p>
+    <h2> COLLECTION OF WORK </h2>
+    </p>
     <ol>
         <li>
             <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank">Week 1 | Monday/Tuesday</a>
@@ -82,7 +87,9 @@
     <br>
     <br>
 
-    <p class="pro_bg"> PROFESSIONAL/PERSONAL BACKGROUND </p>
+    <p>
+    <h2> PROFESSIONAL/PERSONAL BACKGROUND </h2>
+    </p>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Nunc congue nisi vitae suscipit tellus mauris. Faucibus et molestie ac feugiat sed lectus. Egestas
@@ -94,10 +101,12 @@
     <br>
     <br>
 
-    <p> EDUCATION & SHIFT TO PROGRAMMING </p>
-    <ol>
-        <li>FIELD INSTALLATION MANAGER
-            <br>
+    <p>
+    <h2> EDUCATION & SHIFT TO PROGRAMMING </h2>
+    </p>
+    <ul>
+        <li>
+            <h3> INSTALLATION MANAGER </h3>
             10.2021-CURRENT | SMARTRENT
             Facilitating and orchestrating a smooth installation process is my
             number one priority. I work between the property management
@@ -107,9 +116,9 @@
             management and residents, as well as minimizing the number of
             issues post install.
             </p>
-        <li>COMMUNITY MANAGER
-            <br>
-            <span class="">04.2021-10.2021 | MILL CREEK RESIDENTIAL</span>
+        <li>
+            <h3> COMMUNITY MANAGER </h3>
+            04.2021-10.2021 | MILL CREEK RESIDENTIAL
             Oversaw and managed all operation aspects of the community in
             order to drive company initiatives and goals. To do so, budgets
             were created and adhered to, cost saving initiatives were sought
@@ -117,19 +126,25 @@
             appearances via maintenance staff and vendors was a large part
             of daily operations in order to raise resident retention rate.
         </li>
-        </p>
-    </ol>
+    </ul>
     <br>
     <br>
 
-    <p class="hobbies"> WHEN NOT WORKING... </p>
-    <p>Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor condimentum lacinia quis.
-        Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan tortor
-        posuere ac ut. At tellus at urna condimentum mattis pellentesque id. Vitae justo eget magna fermentum iaculis.
+    <p>
+    <h2> WHEN NOT WORKING... </h2>
+    </p>
+    <p>Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor condimentum lacinia
+        quis.
+        Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan
+        tortor
+        posuere ac ut. At tellus at urna condimentum mattis pellentesque id. Vitae justo eget magna fermentum
+        iaculis.
         Purus viverra accumsan in nisl nisi scelerisque. Malesuada proin libero nunc consequat interdum varius sit.
-        Sapien et ligula ullamcorper malesuada proin libero. Nulla aliquet enim tortor at auctor urna nunc id cursus.
+        Sapien et ligula ullamcorper malesuada proin libero. Nulla aliquet enim tortor at auctor urna nunc id
+        cursus.
         Eget felis eget nunc lobortis. Phasellus vestibulum lorem sed risus. Auctor neque vitae tempus quam. Et odio
-        pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper sit
+        pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper
+        sit
         amet risus nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
     </p>
 
