Review html line by line to find/correct pull page font not applying.

--- a/index.html
+++ b/index.html
@@ -13,141 +13,148 @@
         font-family: trap;
         src: url(/fonts/Trap-ExtraBold.otf)
     }
-
-    div {
-        font-family: trap;
-    }
 </style>
 
 <body>
-    <h1>GRANT ABEL || AN INTRODUCTION</h1>
+    <div>
 
-    <img src="Images/me.jpeg" alt="self portrait">
-    <br>
-    <br>
+        <h1>GRANT ABEL || AN INTRODUCTION</h1>
 
-    <p>
-    <h2> ABOUT ME </h2>
-    </p>
+        <img src="Images/me.jpeg" alt="self portrait">
+        <br>
+        <br>
 
-    <p>
-        Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty of land
-        to roam and play, my families home was to go-to place for many of the neighbor kids to go. We would build forts
-        in the forest adjacent to our property. As we grew older, we began shoveling dirt in an area of our property to
-        make BMX jumps. BMX bikes led to motorcycles and going to local dirtbike races on the weekends.
-
-        During my time in high school I had the chance to attend an extension school which allowed me the opportunity to
-        take part in a graphic design focused curriculm. It was here that I found a true joy in front-end design and
-        beginning design concepts. While I had the mindset to pursue this further as I entered college, ultimately I
-        changed course of degree. Now at this stage in life, looking to come back to the tech industry, I genuinely
-        regret the decision to pursue other avenues for reasons that weren't my own.
-
-        This is now my time. Now I feel free. Welcome to my porfolio.
-    </p>
-    <br>
-    <br>
-
-    <p>
-    <h2> COLLECTION OF WORK </h2>
-    </p>
-    <ol>
-        <li>
-            <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank">Week 1 | Monday/Tuesday</a>
-        </li>
-
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+        <p>
+        <h2> ABOUT ME </h2>
         </p>
+        <p>
+            Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty of
+            land
+            to roam and play, my families home was to go-to place for many of the neighbor kids to go. We would build
+            forts
+            in the forest adjacent to our property. As we grew older, we began shoveling dirt in an area of our property
+            to
+            make BMX jumps. BMX bikes led to motorcycles and going to local dirtbike races on the weekends.
 
-        <li>
-            <a href="https://github.com/gtayyy/Pet-webite.git" target="_blank">Assignment | Pet Website</a>
-        </li>
+            During my time in high school I had the chance to attend an extension school which allowed me the
+            opportunity to
+            take part in a graphic design focused curriculm. It was here that I found a true joy in front-end design and
+            beginning design concepts. While I had the mindset to pursue this further as I entered college, ultimately I
+            changed course of degree. Now at this stage in life, looking to come back to the tech industry, I genuinely
+            regret the decision to pursue other avenues for reasons that weren't my own.
 
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+            This is now my time. Now I feel free. Welcome to my porfolio.
         </p>
+        <br>
+        <br>
 
-        <li>
-            <a href="https://github.com/gtayyy/blog-site.git" target="_blank"> Assignment | Blog</a>
-        </li>
-
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+        <p>
+        <h2> COLLECTION OF WORK </h2>
         </p>
+        <ol>
+            <li>
+                <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank">Week 1 | Monday/Tuesday</a>
+            </li>
 
-        <li>
-            <a href="https://github.com/gtayyy/thursday.git" target="_blank"> Week 1 | Thursday</a>
-        </li>
-
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
-        </p>
-    </ol>
-    </p>
-    <br>
-    <br>
-
-    <p>
-    <h2> PROFESSIONAL/PERSONAL BACKGROUND </h2>
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Nunc congue nisi vitae suscipit tellus mauris. Faucibus et molestie ac feugiat sed lectus. Egestas
-        sed sed risus pretium quam. Ut eu sem integer vitae justo eget magna. Ridiculus mus mauris vitae ultricies leo
-        integer. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Ac tortor dignissim convallis aenean.
-        Pellentesque elit eget gravida cum sociis natoque penatibus et. Eu volutpat odio facilisis mauris sit amet massa
-        vitae. Tristique senectus et netus et.
-    </p>
-    <br>
-    <br>
-
-    <p>
-    <h2> EDUCATION & SHIFT TO PROGRAMMING </h2>
-    </p>
-    <ul>
-        <li>
-            <h3> INSTALLATION MANAGER </h3>
-            10.2021-CURRENT | SMARTRENT
-            Facilitating and orchestrating a smooth installation process is my
-            number one priority. I work between the property management
-            and residents while overseeing a small crew of subcontractors
-            completing the install of new devices. Maintaining a high level of
-            QA is priority two, which ensures an easy transition for the property
-            management and residents, as well as minimizing the number of
-            issues post install.
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
             </p>
-        <li>
-            <h3> COMMUNITY MANAGER </h3>
-            04.2021-10.2021 | MILL CREEK RESIDENTIAL
-            Oversaw and managed all operation aspects of the community in
-            order to drive company initiatives and goals. To do so, budgets
-            were created and adhered to, cost saving initiatives were sought
-            and sales efforts were focused upon. Upkeep of property
-            appearances via maintenance staff and vendors was a large part
-            of daily operations in order to raise resident retention rate.
-        </li>
-    </ul>
-    <br>
-    <br>
 
-    <p>
-    <h2> WHEN NOT WORKING... </h2>
-    </p>
-    <p>Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor condimentum lacinia
-        quis.
-        Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan
-        tortor
-        posuere ac ut. At tellus at urna condimentum mattis pellentesque id. Vitae justo eget magna fermentum
-        iaculis.
-        Purus viverra accumsan in nisl nisi scelerisque. Malesuada proin libero nunc consequat interdum varius sit.
-        Sapien et ligula ullamcorper malesuada proin libero. Nulla aliquet enim tortor at auctor urna nunc id
-        cursus.
-        Eget felis eget nunc lobortis. Phasellus vestibulum lorem sed risus. Auctor neque vitae tempus quam. Et odio
-        pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper
-        sit
-        amet risus nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
-    </p>
+            <li>
+                <a href="https://github.com/gtayyy/Pet-webite.git" target="_blank">Assignment | Pet Website</a>
+            </li>
 
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+            </p>
+
+            <li>
+                <a href="https://github.com/gtayyy/blog-site.git" target="_blank"> Assignment | Blog</a>
+            </li>
+
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+            </p>
+
+            <li>
+                <a href="https://github.com/gtayyy/thursday.git" target="_blank"> Week 1 | Thursday</a>
+            </li>
+
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+            </p>
+        </ol>
+        </p>
+        <br>
+        <br>
+
+        <p>
+        <h2> PROFESSIONAL/PERSONAL BACKGROUND </h2>
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Nunc congue nisi vitae suscipit tellus mauris. Faucibus et molestie ac feugiat sed lectus.
+            Egestas
+            sed sed risus pretium quam. Ut eu sem integer vitae justo eget magna. Ridiculus mus mauris vitae ultricies
+            leo
+            integer. Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Ac tortor dignissim convallis
+            aenean.
+            Pellentesque elit eget gravida cum sociis natoque penatibus et. Eu volutpat odio facilisis mauris sit amet
+            massa
+            vitae. Tristique senectus et netus et.
+        </p>
+        <br>
+        <br>
+
+        <p>
+        <h2> EDUCATION & SHIFT TO PROGRAMMING </h2>
+        </p>
+        <ul>
+            <li>
+                <h3> INSTALLATION MANAGER </h3>
+                10.2021-CURRENT | SMARTRENT
+                Facilitating and orchestrating a smooth installation process is my
+                number one priority. I work between the property management
+                and residents while overseeing a small crew of subcontractors
+                completing the install of new devices. Maintaining a high level of
+                QA is priority two, which ensures an easy transition for the property
+                management and residents, as well as minimizing the number of
+                issues post install.
+                </p>
+            <li>
+                <h3> COMMUNITY MANAGER </h3>
+                04.2021-10.2021 | MILL CREEK RESIDENTIAL
+                Oversaw and managed all operation aspects of the community in
+                order to drive company initiatives and goals. To do so, budgets
+                were created and adhered to, cost saving initiatives were sought
+                and sales efforts were focused upon. Upkeep of property
+                appearances via maintenance staff and vendors was a large part
+                of daily operations in order to raise resident retention rate.
+            </li>
+        </ul>
+        <br>
+        <br>
+
+        <p>
+        <h2> WHEN NOT WORKING... </h2>
+        </p>
+
+        <p>Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor condimentum lacinia
+            quis.
+            Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan
+            tortor
+            posuere ac ut. At tellus at urna condimentum mattis pellentesque id. Vitae justo eget magna fermentum
+            iaculis.
+            Purus viverra accumsan in nisl nisi scelerisque. Malesuada proin libero nunc consequat interdum varius sit.
+            Sapien et ligula ullamcorper malesuada proin libero. Nulla aliquet enim tortor at auctor urna nunc id
+            cursus.
+            Eget felis eget nunc lobortis. Phasellus vestibulum lorem sed risus. Auctor neque vitae tempus quam. Et odio
+            pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper
+            sit
+            amet risus nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
+        </p>
+    </div>
 </body>
 
 </html>
