Align center picture of self; add box at top of page.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 <body>
     <div>
 
-        <h1>GRANT ABEL || AN INTRODUCTION</h1>
+        <h1><span class="border">GRANT ABEL</span></h1>
 
-        <img src="Images/me.jpeg" alt="self portrait">
+        <img src="Images/me.jpeg" alt="self portrait" class="img">
+        <br>
+        <br>
         <br>
         <br>
 
