add border box to other copy sections; adjust border box margins.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <p>
         <h2> ABOUT ME </h2>
         </p>
+
         <p>
             Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty of
             land
@@ -50,12 +51,12 @@
         <br>
         <br>
 
-        <p>
         <h2> COLLECTION OF WORK </h2>
         </p>
         <ol>
             <li>
-                <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank">Week 1 | Monday/Tuesday</a>
+                <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank"><strong> Week 1 |
+                        Monday/Tuesday </strong></a>
             </li>
 
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -63,7 +64,8 @@
             </p>
 
             <li>
-                <a href="https://github.com/gtayyy/Pet-webite.git" target="_blank">Assignment | Pet Website</a>
+                <a href="https://github.com/gtayyy/Pet-webite.git" target="_blank"><strong> Assignment | Pet Website
+                    </strong></a>
             </li>
 
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -71,7 +73,8 @@
             </p>
 
             <li>
-                <a href="https://github.com/gtayyy/blog-site.git" target="_blank"> Assignment | Blog</a>
+                <a href="https://github.com/gtayyy/blog-site.git" target="_blank"><strong> Assignment | Blog
+                    </strong></a>
             </li>
 
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -79,7 +82,8 @@
             </p>
 
             <li>
-                <a href="https://github.com/gtayyy/thursday.git" target="_blank"> Week 1 | Thursday</a>
+                <a href="https://github.com/gtayyy/thursday.git" target="_blank"><strong> Week 1 | Thursday
+                    </strong></a>
             </li>
 
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -93,7 +97,8 @@
         <p>
         <h2> PROFESSIONAL/PERSONAL BACKGROUND </h2>
         </p>
-        <p>
+
+        <div class="copyborder">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. Nunc congue nisi vitae suscipit tellus mauris. Faucibus et molestie ac feugiat sed lectus.
@@ -105,7 +110,7 @@
             Pellentesque elit eget gravida cum sociis natoque penatibus et. Eu volutpat odio facilisis mauris sit amet
             massa
             vitae. Tristique senectus et netus et.
-        </p>
+        </div>
         <br>
         <br>
 
@@ -113,27 +118,30 @@
         <h2> EDUCATION & SHIFT TO PROGRAMMING </h2>
         </p>
         <ul>
-            <li>
-                <h3> INSTALLATION MANAGER </h3>
-                10.2021-CURRENT | SMARTRENT
-                Facilitating and orchestrating a smooth installation process is my
-                number one priority. I work between the property management
-                and residents while overseeing a small crew of subcontractors
-                completing the install of new devices. Maintaining a high level of
-                QA is priority two, which ensures an easy transition for the property
-                management and residents, as well as minimizing the number of
-                issues post install.
-                </p>
-            <li>
-                <h3> COMMUNITY MANAGER </h3>
-                04.2021-10.2021 | MILL CREEK RESIDENTIAL
-                Oversaw and managed all operation aspects of the community in
-                order to drive company initiatives and goals. To do so, budgets
-                were created and adhered to, cost saving initiatives were sought
-                and sales efforts were focused upon. Upkeep of property
-                appearances via maintenance staff and vendors was a large part
-                of daily operations in order to raise resident retention rate.
-            </li>
+            <div class="copyborder">
+                <li>
+                    INSTALLATION MANAGER 10.2021-CURRENT | SMARTRENT
+                    <br>
+                    <em>Facilitating and orchestrating a smooth installation process is my
+                        number one priority. I work between the property management
+                        and residents while overseeing a small crew of subcontractors
+                        completing the install of new devices. Maintaining a high level of
+                        QA is priority two, which ensures an easy transition for the property
+                        management and residents, as well as minimizing the number of
+                        issues post install.
+                    </em>
+                    <br>
+                    <br>
+                <li>
+                    COMMUNITY MANAGER 04.2021-10.2021 | MILL CREEK RESIDENTIAL
+                    <br>
+                    <em>Oversaw and managed all operation aspects of the community in
+                        order to drive company initiatives and goals. To do so, budgets
+                        were created and adhered to, cost saving initiatives were sought
+                        and sales efforts were focused upon. Upkeep of property
+                        appearances via maintenance staff and vendors was a large part
+                        of daily operations in order to raise resident retention rate.</em>
+            </div>
         </ul>
         <br>
         <br>
@@ -142,7 +150,9 @@
         <h2> WHEN NOT WORKING... </h2>
         </p>
 
-        <p>Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor condimentum lacinia
+        <p>
+        <div class="copyborder"> Turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor
+            condimentum lacinia
             quis.
             Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan
             tortor
@@ -155,6 +165,7 @@
             pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper
             sit
             amet risus nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
+        </div>
         </p>
     </div>
 </body>
