--- a/index.html
+++ b/index.html
@@ -30,66 +30,79 @@
         <h2> ABOUT ME </h2>
         </p>
 
-        <p>
-            Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty of
-            land
-            to roam and play, my families home was to go-to place for many of the neighbor kids to go. We would build
-            forts
-            in the forest adjacent to our property. As we grew older, we began shoveling dirt in an area of our property
-            to
-            make BMX jumps. BMX bikes led to motorcycles and going to local dirtbike races on the weekends.
+        <div class="copyborder">
+            <p>
+                Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty
+                of
+                land
+                to roam and play, my families home was to go-to place for many of the neighbor kids to go. We would
+                build
+                forts
+                in the forest adjacent to our property. As we grew older, we began shoveling dirt in an area of our
+                property
+                to
+                make BMX jumps. BMX bikes led to motorcycles and going to local dirtbike races on the weekends.
 
-            During my time in high school I had the chance to attend an extension school which allowed me the
-            opportunity to
-            take part in a graphic design focused curriculm. It was here that I found a true joy in front-end design and
-            beginning design concepts. While I had the mindset to pursue this further as I entered college, ultimately I
-            changed course of degree. Now at this stage in life, looking to come back to the tech industry, I genuinely
-            regret the decision to pursue other avenues for reasons that weren't my own.
+                During my time in high school I had the chance to attend an extension school which allowed me the
+                opportunity to
+                take part in a graphic design focused curriculm. It was here that I found a true joy in front-end design
+                and
+                beginning design concepts. While I had the mindset to pursue this further as I entered college,
+                ultimately I
+                changed course of degree. Now at this stage in life, looking to come back to the tech industry, I
+                genuinely
+                regret the decision to pursue other avenues for reasons that weren't my own.
 
-            This is now my time. Now I feel free. Welcome to my porfolio.
-        </p>
+                This is now my time. Now I feel free. Welcome to my porfolio.
+            </p>
+        </div>
         <br>
         <br>
 
         <h2> COLLECTION OF WORK </h2>
-        </p>
-        <ol>
-            <li>
-                <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank"><strong> Week 1 |
-                        Monday/Tuesday </strong></a>
-            </li>
+        <div class="copyborder">
+            <ol>
+                <li>
+                    <a href="https://github.com/gtayyy/Week-1---Tuesday.git" target="_blank"><strong> Week 1 |
+                            Monday/Tuesday </strong></a>
+                </li>
 
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
-            </p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+                </p>
 
-            <li>
-                <a href="https://github.com/gtayyy/Pet-webite.git" target="_blank"><strong> Assignment | Pet Website
-                    </strong></a>
-            </li>
+                <li>
+                    <a href="https://github.com/gtayyy/Pet-webite.git" target="_blank"><strong> Assignment | Pet Website
+                        </strong></a>
+                </li>
 
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
-            </p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+                </p>
 
-            <li>
-                <a href="https://github.com/gtayyy/blog-site.git" target="_blank"><strong> Assignment | Blog
-                    </strong></a>
-            </li>
+                <li>
+                    <a href="https://github.com/gtayyy/blog-site.git" target="_blank"><strong> Assignment | Blog
+                        </strong></a>
+                </li>
 
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
-            </p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+                </p>
 
-            <li>
-                <a href="https://github.com/gtayyy/thursday.git" target="_blank"><strong> Week 1 | Thursday
-                    </strong></a>
-            </li>
+                <li>
+                    <a href="https://github.com/gtayyy/thursday.git" target="_blank"><strong> Week 1 | Thursday
+                        </strong></a>
+                </li>
 
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
-            </p>
-        </ol>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Amet est placerat in egestas erat imperdiet.
+                </p>
+            </ol>
+        </div>
         </p>
         <br>
         <br>
