--- a/index.html
+++ b/index.html
@@ -4,61 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="/css/styles.css" rel="stylesheet" type="text/css">
     <title>GTA | Portfolio</title>
 </head>
 
 <style>
     @font-face {
-        font-family: trap;
-        src: url(/fonts/Trap-ExtraBold.otf)
-    }
+      font-family: trap;
+      src: url(/fonts/Trap-ExtraBold.otf)
+    	}
 </style>
 
 <body>
-    <div>
-
-        <h1><span class="border">GRANT ABEL</span></h1>
-
-        <img src="Images/me.jpeg" alt="self portrait" class="img">
-        <br>
-        <br>
-        <br>
-        <br>
-
-        <p>
-        <h2> ABOUT ME </h2>
-        </p>
-
-        <div class="copyborder">
-            <p>
-                Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty
-                of
-                land
-                to roam and play, my families home was to go-to place for many of the neighbor kids to go. We would
-                build
-                forts
-                in the forest adjacent to our property. As we grew older, we began shoveling dirt in an area of our
-                property
-                to
-                make BMX jumps. BMX bikes led to motorcycles and going to local dirtbike races on the weekends.
-
-                During my time in high school I had the chance to attend an extension school which allowed me the
-                opportunity to
-                take part in a graphic design focused curriculm. It was here that I found a true joy in front-end design
-                and
-                beginning design concepts. While I had the mindset to pursue this further as I entered college,
-                ultimately I
-                changed course of degree. Now at this stage in life, looking to come back to the tech industry, I
-                genuinely
-                regret the decision to pursue other avenues for reasons that weren't my own.
-
-                This is now my time. Now I feel free. Welcome to my porfolio.
-            </p>
-        </div>
-        <br>
-        <br>
-
+  <div>
+		<h1><span class="border">GRANT ABEL</span></h1>
+		<img src="Images/me.jpeg" alt="self portrait" class="img">
+	</div>
+    <br>
+    <br>
+    <br>
+    <br>
+		
+  	<h2> ABOUT ME </h2>
+		<div class="copyborder">
+			Born and raised just outside of Portland, I was fortunate enough to grow up on a few acres. With plenty
+			of land to roam and play, my families home was to go-to place for many of the neighbor kids to go. We would
+			build forts in the forest adjacent to our property. As we grew older, we began shoveling dirt in an area of our
+			property to make BMX jumps. BMX bikes led to motorcycles and going to local dirtbike races on the weekends.
+			During my time in high school I had the chance to attend an extension school which allowed me the
+			opportunity to take part in a graphic design focused curriculm. It was here that I found a true joy in front-end 
+			design and beginning design concepts. While I had the mindset to pursue this further as I entered college,
+			ultimately I changed course of degree. Now at this stage in life, looking to come back to the tech industry, I
+			genuinely regret the decision to pursue other avenues for reasons that weren't my own.
+			<p id=""> This is my time. Now I feel free. Welcome to my porfolio. </p>
+    </div>
+    <br>
+    <br>
+	
         <h2> COLLECTION OF WORK </h2>
         <div class="copyborder">
             <ol>
@@ -163,8 +145,8 @@
         <h2> WHEN NOT WORKING... </h2>
         </p>
 
-        <p>
-        <div class="copyborder"> Turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor
+    <p>
+    <div class="copyborder"> Turpis cursus in hac habitasse platea dictumst quisque sagittis. Vitae tortor
             condimentum lacinia
             quis.
             Egestas diam in arcu cursus euismod quis. Tempor orci dapibus ultrices in iaculis nunc. Luctus accumsan
@@ -178,9 +160,8 @@
             pellentesque diam volutpat commodo sed. Tortor dignissim convallis aenean et tortor at risus. Ullamcorper
             sit
             amet risus nullam eget. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc.
-        </div>
-        </p>
     </div>
-</body>
-
+    </p>
+		</div>
+  </body>
 </html>
